--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id = "particles-js"></div>
         <div class="home__container spacing-wrapper" class="particles-js">
             <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
-            <p class="home__description" data-anime="bottom">Sou desenvolvedor Front-end & UI/UX freelancer.</p>
+            <p class="home__description" data-anime="bottom">Sou desenvolvedor Front-end & UI/UX.</p>
             <p class="home__description home__description--2 mt20" data-anime="bottom">"Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado.Continue rolando para baixo para ver um pouco mais do meu trabalho."</p>
             <a href="#services" class="home__btn" data-anime="bottom">Saiba mais</a>
         </div>
@@ -57,7 +57,9 @@
                         <li class="card__description">Html & CSS</li> 
                         <li class="card__description">SASS & SCSS</li> 
                         <li class="card__description">Bootstrap</li> 
-                        <li class="card__description">Javascript</li> 
+                        <li class="card__description">Materialize</li> 
+                        <li class="card__description">Javascript</li>
+                        <li class="card__description">Jquery</li>  
                         <li class="card__description">Wordpress</li> 
                     </ul>     
                 </div> 
@@ -90,19 +92,45 @@
             <h2 data-anime="left">Portfólio</h2>
             <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
             <div class="portfolio__images my-slider">
-                <img src="assets/images/express-shop.webp" alt="" class="portfolio__img"> 
-                <img src="assets/images/next-bar.webp" alt="" class="portfolio__img">     
-                <img src="assets/images/soul.webp" alt="" class="portfolio__img">
-                <img src="assets/images/heat-page.png" alt="" class="portfolio__img">             
+                <div class="img__container">
+                    <img src="assets/images/express-shop.webp" alt="" class="img"> 
+                    <h3 class="img__title">Express Shop</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="https://expresshop.netlify.app/">https://expresshop.netlify.app/</a></p>
+                </div>
+                <div class="img__container">
+                    <img src="assets/images/next-bar.webp" alt="" class="img"> 
+                    <h3 class="img__title">Next Bar</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                </div>    
+                <div class="img__container">
+                    <img src="assets/images/soul.webp" alt="" class="img">
+                    <h3 class="img__title">Soul</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                </div>
+                <div class="img__container">
+                    <img src="assets/images/heat-page.png" alt="" class="img">
+                    <h3 class="img__title">Heat</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                </div>             
             </div>
             <h3 class="portfolio__subtitle" data-anime="left">Projetos Independentes</h3>
             <div class="portfolio__images my-slider">
-                <img src="assets/images/express-shop.webp" alt="" class="portfolio__img"> 
-                <img src="assets/images/next-bar.webp" alt="" class="portfolio__img">     
-                <img src="assets/images/soul.webp" alt="" class="portfolio__img">
-                <img src="assets/images/heat-page.png" alt="" class="portfolio__img">             
-            </div>
-            
+                <div class="img__container">
+                    <img src="assets/images/tasklistjs.webp" alt="" class="img"> 
+                    <h3 class="img__title">Heat</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                </div>
+                <div class="img__container">
+                    <img src="assets/images/cardcarouseljs.webp" alt="" class="img">
+                    <h3 class="img__title">Heat</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                </div>
+                <div class="img__container">
+                    <img src="assets/images/cafeteria-blog.webp" alt="" class="img">
+                    <h3 class="img__title">Heat</h3>
+                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                </div>
+            </div> 
         </div>  
     </section>  
     <!-- Contact --> 
@@ -111,8 +139,8 @@
             <h2 data-anime="left">Contato</h2>  
             <div class="contact__subtitleContainer" data-anime="bottom"> 
                 <p class="contact__subtitle contact__subtitle--1">Não perca tempo, entre em contato comigo e faça um orçamento hoje mesmo.</p>
-                <p class="contact__subtitle"><i class="far fa-envelope" class="contact__icon"></i> fernando.chaves16@hotmail.com</p>  
-                <p class="contact__subtitle"> <i class="fab fa-instagram"></i> Instagram - @fernandochavesfc</p>   
+                <p class="contact__subtitle"><i class="far fa-envelope contact__icon"></i> fernando.chaves16@hotmail.com</p>  
+                <p class="contact__subtitle"> <i class="fab fa-instagram contact__icon" ></i> Instagram - @fernandochavesfc</p>   
                 <p class="contact__subtitle"><i class="fab fa-whatsapp contact__icon"></i> Whatsapp - (51)99885-7983 </p>
             </div>           
         </div>
