--- a/index.html
+++ b/index.html
@@ -95,40 +95,40 @@
                 <div class="img__container">
                     <img src="assets/images/express-shop.webp" alt="" class="img"> 
                     <h3 class="img__title">Express Shop</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="https://expresshop.netlify.app/">https://expresshop.netlify.app/</a></p>
+                    <p class="img__description">E-commerce fictícia focada no ramo de roupas. Acesse em <a href="https://expresshop.netlify.app/" class="img__link">https://expresshop.netlify.app/</a></p>
                 </div>
                 <div class="img__container">
                     <img src="assets/images/next-bar.webp" alt="" class="img"> 
                     <h3 class="img__title">Next Bar</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                    <p class="img__description">Site com a temática bar, construido usando apenas Html, CSS & Figma. Acesse em <a href="https://nextbar.netlify.app/" class="img__link">https://nextbar.netlify.app/</a></p>
                 </div>    
                 <div class="img__container">
                     <img src="assets/images/soul.webp" alt="" class="img">
                     <h3 class="img__title">Soul</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                    <p class="img__description">Landing page fictícia de uma empresa focada em soluções tecnológicas. Acesse em <a href="https://soulwebsite.netlify.app/" class="img__link">https://soulwebsite.netlify.app/</a></p>
                 </div>
                 <div class="img__container">
                     <img src="assets/images/heat-page.png" alt="" class="img">
                     <h3 class="img__title">Heat</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                    <p class="img__description">Landing page fictícia de uma empresa focada em criação de Landing pages. Acesse em <a href="https://heatpage.netlify.app/" class="img__link">https://heatpage.netlify.app/</a></p>
                 </div>             
             </div>
             <h3 class="portfolio__subtitle" data-anime="left">Projetos Independentes</h3>
             <div class="portfolio__images my-slider">
                 <div class="img__container">
                     <img src="assets/images/tasklistjs.webp" alt="" class="img"> 
-                    <h3 class="img__title">Heat</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                    <h3 class="img__title">Task List</h3>
+                    <p class="img__description">Lista de tarefas com funções de busca, filtro e deletar, construido com HTML,CSS e JS. Acesse em <a href="https://jstasklist.netlify.app/" class="img__link">https://jstasklist.netlify.app/</a></p>
                 </div>
                 <div class="img__container">
                     <img src="assets/images/cardcarouseljs.webp" alt="" class="img">
-                    <h3 class="img__title">Heat</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                    <h3 class="img__title">Card Carousel</h3>
+                    <p class="img__description">Carrossel de cartas com funções de ir para próxima e anterior, construido com HTML,CSS e JS. Acesse em <a href="https://cardcarouseljs.netlify.app/" class="img__link">https://cardcarouseljs.netlify.app/</a></p>
                 </div>
                 <div class="img__container">
                     <img src="assets/images/cafeteria-blog.webp" alt="" class="img">
-                    <h3 class="img__title">Heat</h3>
-                    <p class="img__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam possimus ullam pariatur magni dolores, aliquid cum. <a href="">https://expresshop.netlify.app/</a></p>
+                    <h3 class="img__title">Cafeteria Blog</h3>
+                    <p class="img__description">Site com temática blog criado para treinar propriedades de CSS Grid. Acesse em <a href="https://cafeteriablog.netlify.app/" class="img__link">https://cafeteriablog.netlify.app/</a></p>
                 </div>
             </div> 
         </div>  
