--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
     <!-- Estilização -->
-    <link rel="stylesheet" href="/assets/css/style.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="/assets/css/responsive.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/slick-theme.css">
+    <link rel="stylesheet" href="slick-theme.css">
+    <link rel="stylesheet" href="slick.css">
 
 
     <!-- Bibliotecas CSS -->
@@ -113,24 +113,6 @@
                     <p class="img__description">Landing page fictícia de uma empresa focada em criação de Landing pages. Acesse em <a href="https://heatpage.netlify.app/" class="img__link">https://heatpage.netlify.app/</a></p>
                 </div>             
             </div>
-            <h3 class="portfolio__subtitle" data-anime="left">Projetos Independentes</h3>
-            <div class="portfolio__images my-slider">
-                <div class="img__container">
-                    <img src="assets/images/tasklistjs.webp" alt="" class="img"> 
-                    <h3 class="img__title">Task List</h3>
-                    <p class="img__description">Lista de tarefas com funções de busca, filtro e deletar, construido com HTML,CSS e JS. Acesse em <a href="https://jstasklist.netlify.app/" class="img__link">https://jstasklist.netlify.app/</a></p>
-                </div>
-                <div class="img__container">
-                    <img src="assets/images/cardcarouseljs.webp" alt="" class="img">
-                    <h3 class="img__title">Card Carousel</h3>
-                    <p class="img__description">Carrossel de cartas com funções de ir para próxima e anterior, construido com HTML,CSS e JS. Acesse em <a href="https://cardcarouseljs.netlify.app/" class="img__link">https://cardcarouseljs.netlify.app/</a></p>
-                </div>
-                <div class="img__container">
-                    <img src="assets/images/cafeteria-blog.webp" alt="" class="img">
-                    <h3 class="img__title">Cafeteria Blog</h3>
-                    <p class="img__description">Site com temática blog criado para treinar propriedades de CSS Grid. Acesse em <a href="https://cafeteriablog.netlify.app/" class="img__link">https://cafeteriablog.netlify.app/</a></p>
-                </div>
-            </div> 
         </div>  
     </section>  
     <!-- Contact --> 
