--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
     <!-- Estilização -->
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="stylesheet" href="/assets/css/responsive.css">
-    <link rel="stylesheet" href="slick-theme.css">
-    <link rel="stylesheet" href="slick.css">
-
-
+    
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/slick-theme.css">
+    
     <!-- Bibliotecas CSS -->
     <script src="https://kit.fontawesome.com/6465650075.js" crossorigin="anonymous"></script>
 </head>
@@ -25,12 +24,12 @@
         <div class="bars__burger"></div>
     </div>
     <!-- Home -->  
-    <section id="home">
+    <section class="home" id="home">
         <div id = "particles-js"></div>
         <div class="home__container spacing-wrapper" class="particles-js">
             <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
             <p class="home__description" data-anime="bottom">Sou desenvolvedor Front-end & UI/UX.</p>
-            <p class="home__description home__description--2 mt20" data-anime="bottom">"Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado.Continue rolando para baixo para ver um pouco mais do meu trabalho."</p>
+            <p class="home__paragraph mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado.Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
             <a href="#services" class="home__btn" data-anime="bottom">Saiba mais</a>
         </div>
     </section>
@@ -77,7 +76,7 @@
         </div>
     </section> 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="about">
         <div class="container spacing-wrapper">
             <h2 data-anime="left">Sobre</h2>
             <img src="/assets/images/eu.webp" alt="" class="about__img" data-anime="left">
@@ -87,7 +86,7 @@
         </div>
         </section>
     <!-- Portfolio -->
-    <section id="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container spacing-wrapper">
             <h2 data-anime="left">Portfólio</h2>
             <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
@@ -116,7 +115,7 @@
         </div>  
     </section>  
     <!-- Contact --> 
-    <section id="contact">
+    <section class="contact" id="contact">
         <div class="contact__container spacing-wrapper">
             <h2 data-anime="left">Contato</h2>  
             <div class="contact__subtitleContainer" data-anime="bottom"> 
@@ -144,8 +143,10 @@
             $('.my-slider').slick({
                 centerMode: true,
                 slidesToShow: 1,
+                dots: true,
+                arrows: false,
                 autoplay: true,
-                autoplaySpeed: 3000,
+                autoplaySpeed: 2000,
                 responsive: [
             {
                 breakpoint: 768,
