--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
             <p class="home__description" data-anime="bottom">Sou desenvolvedor Front-end & UI/UX.</p>
             <p class="home__paragraph mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado.Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
-            <a href="#services" class="home__btn" data-anime="bottom">Saiba mais</a>
+            <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando,%20gostei%20muito%20do%20seu%20servi%C3%A7o%20e%20gostaria%20de%20contrat%C3%A1-lo." class="home__btn" data-anime="bottom">Saiba mais</a>
         </div>
     </section>
     <!-- Whatsapp Icon -->
@@ -96,6 +96,11 @@
                     <p class="img__description">E-commerce fictícia focada no ramo de roupas. <br><a href="https://expresshop.netlify.app/" class="img__btn">Acessar Site</a></p>
                 </div>
                 <div class="img__container">
+                    <img src="assets/images/heat-page.png" alt="" class="img">
+                    <h3 class="img__title">Heat</h3>
+                    <p class="img__description">Landing page fictícia de uma empresa focada em criação de Landing pages. <br><a href="https://heatpage.netlify.app/" class="img__btn">Acessar Site</a></p>
+                </div>  
+                <div class="img__container">
                     <img src="assets/images/next-bar.webp" alt="" class="img"> 
                     <h3 class="img__title">Next Bar</h3>
                     <p class="img__description">Site com a temática bar, construido usando apenas Html, CSS & Figma. <br><a href="https://nextbar.netlify.app/" class="img__btn">Acessar Site</a></p>
@@ -104,12 +109,7 @@
                     <img src="assets/images/soul.webp" alt="" class="img">
                     <h3 class="img__title">Soul</h3>
                     <p class="img__description">Landing page fictícia de uma empresa focada em soluções tecnológicas. <br><a href="https://soulwebsite.netlify.app/" class="img__btn">Acessar Site</a></p>
-                </div>
-                <div class="img__container">
-                    <img src="assets/images/heat-page.png" alt="" class="img">
-                    <h3 class="img__title">Heat</h3>
-                    <p class="img__description">Landing page fictícia de uma empresa focada em criação de Landing pages. <br><a href="https://heatpage.netlify.app/" class="img__btn">Acessar Site</a></p>
-                </div>             
+                </div>           
             </div>
         </div>  
     </section>  
@@ -118,10 +118,12 @@
         <div class="contact__container spacing-wrapper">
             <h2 data-anime="left">/Contato</h2>  
             <div class="contact__subtitleContainer" data-anime="bottom"> 
-                <p class="contact__subtitle contact__subtitle--1">Não perca tempo, entre em contato comigo e faça um orçamento hoje mesmo.</p>
-                <p class="contact__subtitle"><i class="far fa-envelope contact__icon"></i> fernando.chaves16@hotmail.com</p>  
-                <p class="contact__subtitle"> <i class="fab fa-instagram contact__icon" ></i> Instagram - @fernandochavesfc</p>   
-                <p class="contact__subtitle"><i class="fab fa-whatsapp contact__icon"></i> Whatsapp - (51)99885-7983 </p>
+                <p class="contact__subtitle contact__subtitle--1">Não perca tempo, entre em contato comigo e faça um orçamento hoje mesmo.</p><br>
+                <a href="" class="contact__subtitle"><i class="far fa-envelope contact__icon"></i> fernando.chaves16@hotmail.com</a><br>  
+                <a href="https://www.instagram.com/fernandochavesfc/" class="contact__subtitle"> <i class="fab fa-instagram contact__icon" ></i> Instagram - @fernandochavesfc</a><br> 
+                <a href="https://www.instagram.com/fernandochavesfc/" class="contact__subtitle"> <i class="fab fa-linkedin contact__icon" ></i> Linkedin - fernandochavesfc</a><br>  
+                <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando,%20gostei%20muito%20do%20seu%20servi%C3%A7o%20e%20gostaria%20de%20contrat%C3%A1-lo." class="contact__subtitle"><i class="fab fa-whatsapp contact__icon"></i> Whatsapp - (51)99885-7983 </a><br>
+                <a href="https://github.com/devsfe" class="contact__subtitle"> <i class="fab fa-github contact__icon" ></i> Github - devsfe</a>
             </div>           
         </div>
     </section>
