--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('.my-slider').slick({
-                centerMode: true,
+                centerMode: false,
                 slidesToShow: 2,
-                slidesToScroll: 2,
                 dots: true,
                 arrows: false,
                 autoplay: true,
