--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <script src="/assets/javascript/particles.js"></script>
     <script src="/assets/javascript/app.js"></script>
     <script src="/assets/javascript/main.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="assets/javascript/slick.min.js"></script>
     <script type="text/javascript">
