--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('.my-slider').slick({
-                centerMode: false,
+                centerMode: true,
+                slidesToShow: 2,
                 slidesToShow: 2,
                 dots: true,
                 arrows: false,
